--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -21,10 +21,13 @@
       </thead>
       <tbody>
         <% for(let url in urls) { %>
+          <form method="POST" action="/urls/<%=url%>/delete">
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td><button type="submit" class="btn btn-primary">Delete</button></td>
           </tr>
+        </form>
         <% } %>
       </tbody>
     </table>
