--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -21,13 +21,16 @@
       </thead>
       <tbody>
         <% for(let url in urls) { %>
-          <form method="POST" action="/urls/<%=url%>/delete">
+        
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
-            <td><button type="submit" class="btn btn-primary">Delete</button></td>
+            <td>  <form method="POST" action="/urls/<%=url%>"><button type="submit" class="btn btn-primary">Edit</button></form></td>
+            <td>  <form method="POST" action="/urls/<%=url%>/delete"><button type="submit" class="btn btn-primary">Delete</button></form></td>
+            
+
           </tr>
-        </form>
+      
         <% } %>
       </tbody>
     </table>
