--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,4 +1,5 @@
 <header>
+  
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,6 +9,15 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+      </div>
+      <div>
+        
+          <% if(username) { %>
+            <form method="POST" action="logout"><label>Logged In As : <%=username %></label> <button type="submit">Logout</button></form>
+          <% } else { %>
+            <form method="POST" action="login"><input name="userName" text="Username"> <button type="submit">Login</button></form>
+          <% } %>
+        
       </div>
     </div>
   </nav>
