--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -16,10 +16,11 @@
       <thead>
         <tr>
           <th scope="col">Short URL</th>
-          <th scope="col">Long URL</th>
+          <th scope="col" colspan="3">Long URL</th>
         </tr>
       </thead>
       <tbody>
+        <% if(username) { %>
         <% for(let url in urls) { %>
         
           <tr>
@@ -31,6 +32,7 @@
 
           </tr>
       
+        <% } %>
         <% } %>
       </tbody>
     </table>
