--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -20,7 +20,8 @@
         </tr>
       </thead>
       <tbody>
-        <% if(username) { %>
+      <%=JSON.stringify(foundUser)%>
+        <% if(JSON.stringify(foundUser) != '{}'){%>
         <% for(let url in urls) { %>
         
           <tr>
@@ -31,9 +32,9 @@
             
 
           </tr>
+      <% } %>
+      <% } %>  
       
-        <% } %>
-        <% } %>
       </tbody>
     </table>
   </main>
