--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -14,7 +14,7 @@
         
         <% if(JSON.stringify(foundUser) != '{}'){%>
             <form method="POST" action="/urls/logout" style="margin-left: auto;display:flex;margin-bottom:0px ;"><label class="nav-item nav-link" >Logged In As : <%=foundUser['email']%></label> <button type="submit" class="nav-item nav-link" style="background-color: #28a745;border: 2px solid black;
-              border-radius: 5px;">Logout</button></form>
+              border-radius: 5px;cursor: pointer;">Logout</button></form>
       <% } else { %>
             <div class="navbar-nav" style="margin-left: auto;display: flex;">
               <a class="nav-item nav-link" href="/login">Login</a>
