--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,8 +27,10 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
-            <td>  <form method="POST" action="/urls/<%=url%>"><button type="submit" class="btn btn-primary">Edit</button></form></td>
-            <td>  <form method="POST" action="/urls/<%=url%>/delete"><button type="submit" class="btn btn-primary">Delete</button></form></td>
+            <td>  <form method="POST" action="/urls/<%=url%>"><button type="submit" class="btn btn-primary" style="background-color: white;
+              border: 2px solid #28a745;color: black;border-radius: 5px;">Edit</button></form></td>
+            <td>  <form method="POST" action="/urls/<%=url%>/delete" ><button type="submit" class="btn btn-primary" style="background-color: white;
+              border: 2px solid red;color: black;border-radius: 5px;">Delete</button></form></td>
             
 
           </tr>
