--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -25,7 +25,7 @@
       <p class="card-text">
         <form method="post" action="<%=shortURL%>/edit">
           <label>Long URL :</label>
-          <input name="longURL" />
+          <input name="longURL" required />
           <button type="submit" class="btn btn-primary">Submit</button>
          </form>
       </p>
