--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <title>TinyApp</title>
@@ -16,23 +15,22 @@
       <thead>
         <tr>
           <th scope="col">Short URL</th>
-          <th scope="col" colspan="3">Long URL</th>
+          <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
+          <th scope="col">Delete</th>
         </tr>
       </thead>
       <tbody>
       
         <% if(JSON.stringify(foundUser) != '{}'){%>
         <% for(let url in urls) { %>
-        
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
             <td>  <form method="POST" action="/urls/<%=url%>"><button type="submit" class="btn btn-primary" style="background-color: white;
               border: 2px solid #28a745;color: black;border-radius: 5px;">Edit</button></form></td>
-            <td>  <form method="POST" action="/urls/<%=url%>/delete" ><button type="submit" class="btn btn-primary" style="background-color: white;
+            <td>  <form method="POST" action="/urls/<%=url%>/?_method=DELETE" ><button type="submit" class="btn btn-primary" style="background-color: white;
               border: 2px solid red;color: black;border-radius: 5px;">Delete</button></form></td>
-            
-
           </tr>
       <% } %>
       <% } %>  
