--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -14,7 +14,8 @@
       <div class="card-header"></div>
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">Short URL: <a href="<%= longURL %>" target="_blank"><%= shortURL %></a></p>
+        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>" target="_blank"><%= shortURL %></a></p>
+        <p><label>viewCount : <%= viewCount %></label> </p>
       </div>
     <div class="card-footer text-muted"></div>
   </div>
@@ -23,9 +24,11 @@
     <div class="card-body">
       <h5 class="card-title">Edit</h5>
       <p class="card-text">
-        <form method="post" action="<%=shortURL%>/edit">
+        
+        <form method="post" action="<%=shortURL%>/?_method=PUT">
           <label>Long URL :</label>
           <input name="longURL" required />
+          <input name="viewCount" value="<%=viewCount%>" hidden>
           <button type="submit" class="btn btn-primary">Submit</button>
          </form>
       </p>
@@ -37,7 +40,7 @@
     <% } %>
   <% } else { %>
     <h2>Please Log In!!</h2>
-    <% } %>
+  <% } %>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
